# XCTest-Framework

./: README.md
framework_app_project/: CMakeLists.txt  build_ios_xctest.sh
framework_app_project/iOSApp/: CMakeLists.txt
framework_app_project/iOSApp/iOSApp/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.m  main.m
framework_app_project/iOSApp/iOSApp.xcodeproj/: project.pbxproj
framework_app_project/iOSApp/iOSApp.xcodeproj/xcshareddata/xcschemes/: iOSApp.xcscheme
framework_app_project/iOSFramework/iOSFramework/: STMLogger.h  STMLogger.m  iOSFramework.h
framework_app_project/iOSFrameworkTests/: iOSFrameworkTests02.m  iOSFrameworkTests04_use_metal.m
framework_app_project/iOSFrameworkTests/test_files/: test_data_02.txt
framework_project/: CMakeLists.txt  build_ios_framework.sh  build_ios_xctest.sh
framework_project/cmake/toolchains/: ios.cmake
framework_project/iOSFramework/iOSFramework/: STMLogger.h  STMLogger.m
framework_project/iOSFramework/iOSFramework.xcodeproj/: project.pbxproj
framework_project/iOSFramework/iOSFramework.xcodeproj/xcshareddata/xcschemes/: iOSFramework.xcscheme
framework_project/iOSFrameworkTests/: CMakeLists.txt  iOSFrameworkTests.m  iOSFrameworkTests03.m
framework_project/iOSFrameworkTests/test_files/: test_data.txt
